# librespot

./: CHANGELOG.md  Cargo.toml
connect/: Cargo.toml
connect/src/: spirc.rs
core/: Cargo.toml
core/src/: authentication.rs  cdn_url.rs  date.rs  file_id.rs  session.rs  spclient.rs  spotify_id.rs
core/src/connection/: handshake.rs
core/src/mercury/: mod.rs
metadata/: Cargo.toml  delete-albums.sh
metadata/src/: album.rs  artist.rs  availability.rs  content_rating.rs  copyright.rs  episode.rs  external_id.rs  image.rs  restriction.rs  sale_period.rs  show.rs  track.rs  video.rs
metadata/src/audio/: file.rs  item.rs
metadata/src/playlist/: annotation.rs  attribute.rs  diff.rs  item.rs  list.rs  mod.rs  operation.rs  permission.rs  root.rs
protocol/: Cargo.toml  build.rs
