[package]
name = "librespot-protocol"
version = "0.5.0-dev"
rust-version = "1.61"
authors = ["Paul Liétar <paul@lietar.net>"]
build = "build.rs"
description = "The protobuf logic for communicating with Spotify servers"
license = "MIT"
repository = "https://github.com/librespot-org/librespot"
edition = "2021"

[dependencies]
protobuf = { version = "2", features = ["with-serde"] }
serde = { version = "1", optional = true }

[build-dependencies]
glob = "0.3"
protobuf-codegen-pure = { version = "2" }

[features]
"with-serde" = ["serde"]
